# yasgm

./: Cargo.toml  DESIGN.md  LICENSE  README.md
src/: autostart.rs  config.rs  local.rs  main.rs  manifest.rs  onedrive.rs  provider.rs  resolve.rs  running.rs  snapshot.rs  steam.rs  store.rs  sync.rs  tray.rs  vdf.rs
ui/: package-lock.json  package.json
ui/scripts/: build-sidecar.sh
ui/src/: index.html  main.js  styles.css
ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
