[package]
name = "yasgm"
version = "0.1.0"
edition = "2024"
description = "Yet another save game manager — seamless cloud sync for PC game saves"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
getrandom = "0.2"
glob = "0.3"
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.39.6"
time = "0.3"
ureq = "2"
url = "2"
zip = "2"

[target."cfg(windows)".dependencies]
winreg = "0.56.0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tao = "0.35.3"
tray-icon = "0.24.1"
